Revise Maven environment variable and links
Updated notes and tips for Maven configuration and troubleshooting.